--- a/funlanguagezone.client/src/components/VideoPlayer.css
+++ b/funlanguagezone.client/src/components/VideoPlayer.css
@@ -5,7 +5,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #efefef;
-    max-height: calc(100vh - 250px);
+    max-height: calc(100vh - 130px);
     min-height: calc(200px);
 }
 
@@ -25,4 +25,21 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.IconDE {
+    background-size: 50px;
+    background-position: center;
+}
+
+.IconEN {
+    background-image: url('../../public/flag_en.png');
+    background-size: 80px;
+    background-position: center;
+}
+
+.IconCZ {
+    background-image: url('../../public/flag_cz.png');
+    background-size: 50px;
+    background-position: center;
 }
